@@ -1277,20 +1277,6 @@ public class BlockManager {
             HashBuckets.getInstance().resetBuckets(storageInfo.getSid());
           }
 
-          // If the DN hasn't block-reported since the most recent
-          // failover, then we may have been holding up on processing
-          // over-replicated blocks because of it. But we can now
-          // process those blocks.
-          boolean stale = false;
-          for (DatanodeStorageInfo storage : node.getStorageInfos()) {
-            if (storage.areBlockContentsStale()) {
-              stale = true;
-              break;
-            }
-          }
-          if (stale) {
-            rescanPostponedMisreplicatedBlocks();
-          }
           return null;
         } catch (Throwable t) {
           LOG.error(t);
@@ -2229,16 +2215,7 @@ public class BlockManager {
       // Get the storageinfo object that we are updating in this processreport
       reportStatistics = processReport(storageInfo, newReport);
 
-      // Now that we have an up-to-date block report, we know that any
-      // deletions from a previous NN iteration have been accounted for.
-      boolean staleBefore = storageInfo.areBlockContentsStale();
       storageInfo.receivedBlockReport();
-      if (staleBefore && !storageInfo.areBlockContentsStale()) {
-        LOG.info(
-            "BLOCK* processReport: Received first block report from " + node
-            + " after becoming active. Its block contents are no longer" + " considered stale");
-        rescanPostponedMisreplicatedBlocks();
-      }
 
       final long endTime = Time.now();
 
@@ -2263,9 +2240,44 @@ public class BlockManager {
   /**
    * Rescan the list of blocks which were previously postponed.
    */
-  private void rescanPostponedMisreplicatedBlocks() throws IOException {
-    HopsTransactionalRequestHandler rescanPostponedMisreplicatedBlocksHandler =
-        new HopsTransactionalRequestHandler(
+  void rescanPostponedMisreplicatedBlocks() throws IOException {
+    if (getPostponedMisreplicatedBlocksCount() == 0) {
+      return;
+    }
+
+    long startTimeRescanPostponedMisReplicatedBlocks = Time.now();
+    long startPostponedMisReplicatedBlocksCount = getPostponedMisreplicatedBlocksCount();
+    try {
+      // blocksPerRescan is the configured number of blocks per rescan.
+      // Randomly select blocksPerRescan consecutive blocks from the HashSet
+      // when the number of blocks remaining is larger than blocksPerRescan.
+      // The reason we don't always pick the first blocksPerRescan blocks is to
+      // handle the case if for some reason some datanodes remain in
+      // content stale state for a long time and only impact the first
+      // blocksPerRescan blocks.
+      int i = 0;
+      long startIndex = 0;
+      long blocksPerRescan = datanodeManager.getBlocksPerPostponedMisreplicatedBlocksRescan();
+      long base = getPostponedMisreplicatedBlocksCount() - blocksPerRescan;
+      if (base > 0) {
+        startIndex = DFSUtil.getRandom().nextLong() % (base + 1);
+        if (startIndex < 0) {
+          startIndex += (base + 1);
+        }
+      }
+
+      Iterator<Block> it = postponedMisreplicatedBlocks.iterator();
+      for (int tmp = 0; tmp < startIndex; tmp++) {
+        it.next();
+      }
+      final Set<Block> toRemove = new HashSet<>();
+      for (; it.hasNext(); i++) {
+        Block b = it.next();
+        if (i >= blocksPerRescan) {
+          break;
+        }
+
+        HopsTransactionalRequestHandler rescanPostponedMisreplicatedBlocksHandler = new HopsTransactionalRequestHandler(
             HDFSOperationType.RESCAN_MISREPLICATED_BLOCKS) {
           INodeIdentifier inodeIdentifier;
 
@@ -2289,14 +2301,12 @@ public class BlockManager {
           @Override
           public Object performTask() throws IOException {
             Block b = (Block) getParams()[0];
-            Set<Block> toRemoveSet = (Set<Block>) getParams()[1];
-
             BlockInfo bi = blocksMap.getStoredBlock(b);
+            Set<Block> toRemoveSet = (Set<Block>) getParams()[1];
             if (bi == null) {
               if (LOG.isDebugEnabled()) {
-                LOG.debug("BLOCK* rescanPostponedMisreplicatedBlocks: " +
-                    "Postponed mis-replicated block " + b +
-                    " no longer found " + "in block map.");
+                LOG.debug("BLOCK* rescanPostponedMisreplicatedBlocks: " + "Postponed mis-replicated block " + b
+                    + " no longer found " + "in block map.");
               }
               toRemoveSet.add(b);
               postponedMisreplicatedBlocksCount.decrementAndGet();
@@ -2304,8 +2314,7 @@ public class BlockManager {
             }
             MisReplicationResult res = processMisReplicatedBlock(bi);
             if (LOG.isDebugEnabled()) {
-              LOG.debug("BLOCK* rescanPostponedMisreplicatedBlocks: " +
-                  "Re-scanned block " + b + ", result is " + res);
+              LOG.debug("BLOCK* rescanPostponedMisreplicatedBlocks: " + "Re-scanned block " + b + ", result is " + res);
             }
             if (res != MisReplicationResult.POSTPONE) {
               toRemoveSet.add(b);
@@ -2315,13 +2324,18 @@ public class BlockManager {
           }
         };
 
-    final Set<Block> toRemove = new HashSet<>();
-    for (Block postponedMisreplicatedBlock : postponedMisreplicatedBlocks) {
-      rescanPostponedMisreplicatedBlocksHandler
-          .setParams(postponedMisreplicatedBlock, toRemove);
-      rescanPostponedMisreplicatedBlocksHandler.handle(namesystem);
+        rescanPostponedMisreplicatedBlocksHandler
+            .setParams(b, toRemove);
+        rescanPostponedMisreplicatedBlocksHandler.handle(namesystem);
+      }
+      postponedMisreplicatedBlocks.removeAll(toRemove);
+    } finally {
+      long endPostponedMisReplicatedBlocksCount = getPostponedMisreplicatedBlocksCount();
+      LOG.info("Rescan of postponedMisreplicatedBlocks completed in " + (Time.now()
+          - startTimeRescanPostponedMisReplicatedBlocks) + " msecs. " + endPostponedMisReplicatedBlocksCount
+          + " blocks are left. " + (startPostponedMisReplicatedBlocksCount - endPostponedMisReplicatedBlocksCount)
+          + " blocks are removed.");
     }
-    postponedMisreplicatedBlocks.removeAll(toRemove);
   }
 
   @VisibleForTesting
@@ -4979,6 +4993,7 @@ public class BlockManager {
             if (namesystem.isPopulatingReplQueues()) {
               computeDatanodeWork();
               processPendingReplications();
+              rescanPostponedMisreplicatedBlocks();
             }
           } else {
             updateState();
@@ -5051,8 +5066,10 @@ public class BlockManager {
     excessReplicateMap.clear();
     invalidateBlocks.clear();
     datanodeManager.clearPendingQueues();
-  }
-
+    postponedMisreplicatedBlocks.clear();
+    postponedMisreplicatedBlocksCount.set(0);
+  };
+  
   private static class ReplicationWork {
 
     private final Block block;
